# fastapi_demo

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0e9ff5332835_init.py  518e7bcf9002_initialmix.py  6fabc7f45e68_initialmix.py  eb6e9a2314ba_initialmix.py
api/: api.py  api_auth.py  api_task.py  api_user.py
core/: config.py  redis_service.py  security.py
crud/: crud_user.py
database/: base.py  session.py
depends/: get_db.py
models/: base_class.py  mixin.py  model_user.py
proj/: celery.py  celeryconfig.py  custom_task.py  tasks.py
schemas/: schema_user.py
