[tool.poetry]
name = "faskapi-demo"
version = "0.1.0"
description = "testing"
authors = ["ibraheem-areeda <ibraheem.areeda@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
redis = "^5.0.3"
aioredis = "^2.0.1"
redis-om = "^0.2.2"
celery = "^5.4.0"
asyncpg = "^0.29.0"
twilio = "^9.2.3"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
